--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Orkut - Profile</title>
 <style>
 body {
 background: url("http://i5.glitter-graphics.org/pub/1989/1989135jcpfuf7km1.png");
@@ -179,7 +180,7 @@ img.right {
 	float: right;
 	margin: 5px;
 }
-</style><ul id="nav"><li>　　　　　　</li><li><a href="/">home</a></li> 
+</style><ul id="nav"><li>　　　　　　<img src="https://i.imgur.com/waqVpkV.png"></li><li><a href="/">home</a></li> 
 <li><a href="/neomessages.phtml?type=send&recipient=sterneflugel">scrapbook</a></li>
 <li><a href="/~_suco_">friends</a></li> 
 <li><a href="/neoboards/index.phtml">communities</a></li>
@@ -190,16 +191,16 @@ img.right {
 <h1></h1>
 <h2>☣×_Drÿìíkàá Cöchàárd_×☣</h2>
 <p><i>female,<br>
-taken,<br>
-central neopia.</i></p>
+dating,<br>
+uk.</i></p>
 <h1></h1>
 <div id="links">
-<a href="/petlookup.phtml?pet=direcore">　profile</a>
-<a href="/neomessages.phtml?type=send&recipient=sterneflugel">　message</a>
-<a href="/~etherealilly">　pictures</a>
-<a href="/~petnamehere">　videos</a>
-<a href="/~_suco_">　testimony</a>
-<a href="/~abyss_citadel">　updates</a>
+<a href="/petlookup.phtml?pet=direcore"><img src="https://i.imgur.com/zyhW73C.png"> profile</a>
+<a href="/neomessages.phtml?type=send&recipient=sterneflugel"><img src="https://i.imgur.com/m2Rmb5e.png"> message</a>
+<a href="/~etherealilly"><img src="https://i.imgur.com/saK5cIS.png"> pictures</a>
+<a href="/~petnamehere"><img src="https://i.imgur.com/p0tC8kd.png"> videos</a>
+<a href="/~_suco_"><img src="https://i.imgur.com/ITXDYrN.png"> testimony</a>
+<a href="/~abyss_citadel"><img src="https://i.imgur.com/ot8Ds0r.png"> updates</a>
 </div>
 <h1></h1>
 <br>
